# lsa-tryout

./: README.md
llm_seo_agent/: .gitignore  ISSUES.md  README.md  main.py  pyproject.toml  requirements.txt
llm_seo_agent/config/: settings.yaml
llm_seo_agent/llm_seo_agent/: main.py
llm_seo_agent/llm_seo_agent/agent/: conversation_manager.py  memory.py  seo_consultant.py  tools.py
llm_seo_agent/llm_seo_agent/interfaces/: cli_chat.py  web_chat.py
llm_seo_agent/llm_seo_agent/prompts/: conversation_flow.txt  seo_analysis.txt  system_prompt.txt
llm_seo_agent/llm_seo_agent/seo_engine/: competitor_tracker.py  crawler.py
llm_seo_agent/llm_seo_agent/utils/: claude_client.py  data_models.py
llm_seo_agent/src/agent/: conversation_manager.py  memory.py  seo_consultant.py  tools.py
llm_seo_agent/src/interfaces/: cli_chat.py  web_chat.py
llm_seo_agent/src/seo_engine/: competitor_tracker.py  content_analyzer.py  crawler.py  performance_monitor.py
llm_seo_agent/src/utils/: claude_client.py  data_models.py
