[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-seo-agent"
version = "1.0.0"
description = "Conversational LLM SEO Agent - Your AI Search Optimization Consultant"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["seo", "ai", "claude", "chatgpt", "optimization", "llm", "conversational-ai"]
requires-python = ">=3.8.1"

# Core dependencies
dependencies = [
    "anthropic>=0.3.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "requests>=2.31.0",
    "aiofiles>=23.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
# Web interface dependencies
web = [
    "streamlit>=1.28.0",
    "plotly>=5.15.0",
    "pandas>=2.0.0",
]

# Advanced content analysis
analysis = [
    "spacy>=3.6.0",
    "textstat>=0.7.0",
    "numpy>=1.24.0",
]

# Slack integration
slack = [
    "slack-sdk>=3.21.0",
]

# All optional dependencies
all = [
    "streamlit>=1.28.0",
    "plotly>=5.15.0",
    "pandas>=2.0.0",
    "spacy>=3.6.0",
    "textstat>=0.7.0",
    "numpy>=1.24.0",
    "slack-sdk>=3.21.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.0",
]

[project.scripts]
llm-seo-agent = "llm_seo_agent.main:main"
seo-agent = "llm_seo_agent.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/llm-seo-agent"
Repository = "https://github.com/yourusername/llm-seo-agent"
Documentation = "https://github.com/yourusername/llm-seo-agent/blob/main/README.md"
Issues = "https://github.com/yourusername/llm-seo-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["llm_seo_agent"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "plotly.*",
    "spacy.*",
    "textstat.*",
    "rich.*",
    "click.*",
    "anthropic.*",
    "bs4.*",
    "aiofiles.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = ["--strict-markers", "--verbose"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"